Adds the PopuladorController

--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,28 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- Swagger -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
+		<!-- Lombok for generating getters, setters, etc -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+		<!-- Easy Random for generating random values -->
+		<dependency>
+			<groupId>org.jeasy</groupId>
+			<artifactId>easy-random-randomizers</artifactId>
+			<version>5.0.0</version>
+		</dependency>
+
+		<!-- Test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
