--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,17 @@
 			<optional>true</optional>
 		</dependency>
 
-		<!-- Easy Random for generating random values -->
+		<!-- Easy Random and Java Faker for generating random values -->
 		<dependency>
 			<groupId>org.jeasy</groupId>
 			<artifactId>easy-random-core</artifactId>
 			<version>5.0.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>1.0.2</version>
 		</dependency>
 
 		<!-- Test -->
