--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
 			<version>2.7.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 		<!-- Swagger -->
 		<dependency>
 			<groupId>io.springfox</groupId>
@@ -37,6 +42,7 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!-- Generates the fake data used in VARCHAR type -->
 		<dependency>
 			<groupId>net.datafaker</groupId>
 			<artifactId>datafaker</artifactId>
